--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!--Version 1.0.0-->
 <!--This is the main file :)-->
 <form>This is a form</form>
+<form>Another form</form>
 <header></header>
 <footer></footer>
